# CodeAgentOps

./: .env.example  .gitignore  README.md  pyproject.toml
examples/reports/: v0_3_report.json  v0_3_report.md  v0_4_report.json  v0_4_report.md
examples/tasks/aggregate_eval_results/: metadata.yaml  prompt.md
examples/tasks/aggregate_eval_results/hidden_tests/: test_eval_summary_hidden.py
examples/tasks/aggregate_eval_results/public_tests/: test_eval_summary_public.py
examples/tasks/aggregate_eval_results/starter/: eval_summary.py
examples/tasks/detect_anomaly_window/: metadata.yaml  prompt.md
examples/tasks/detect_anomaly_window/hidden_tests/: test_monitoring_hidden.py
examples/tasks/detect_anomaly_window/public_tests/: test_monitoring_public.py
examples/tasks/detect_anomaly_window/starter/: monitoring.py
examples/tasks/fix_calculator_bug/: metadata.yaml  prompt.md
examples/tasks/fix_calculator_bug/hidden_tests/: test_calculator_hidden.py
examples/tasks/fix_lru_cache/: metadata.yaml  prompt.md
examples/tasks/implement_slugify/: metadata.yaml  prompt.md
examples/tasks/parse_duration/: metadata.yaml  prompt.md
examples/tasks/retry_policy/: metadata.yaml  prompt.md
src/codeagentops/: artifacts.py  cli.py  config.py  metrics.py  models.py  report.py  runner.py  workspace.py
src/codeagentops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codeagentops/evaluators/: pytest_runner.py
src/codeagentops/patching/: apply_patch.py
src/codeagentops/providers/: deepseek.py
(+14 files in other folders)
