[project]
name = "codeagentops"
version = "0.1.0"
description = "Evaluation and observability for autonomous coding agents as production systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "pytest>=8.2.0",
]

[project.scripts]
codeagentops = "codeagentops.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
